--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "miku",
-  "version": "1.0.0",
+  "version": "6.01.001",
   "private": true,
   "author": "32shade <sugarbaby_cat@yahoo.co.jp>",
   "license": "ISC",
   "description": "(miku-bot for slack)",
   "scripts": {
-    "start": "env HUBOT_SLACK_TOKEN=xoxb-953508061828-956195450646-J1P27ASCFSjaEhgHFOOrFa40 bin/hubot --adapter slack",
+    "start": "env HUBOT_SLACK_TOKEN=xoxb-953508061828-956195450646-B1lTFgOCHPt3HEdkArHNO1e5 bin/hubot --adapter slack",
     "test": "bin/hubot"
   },
   "dependencies": {
     "coffee-script": "^1.12.7",
+    "http": "0.0.0",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-google-images": "^0.2.7",
@@ -24,9 +25,12 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.4.0",
-    "moment-timezone": "^0.5.14"
+    "moment-timezone": "^0.5.14",
+    "pg": "^8.0.3"
   },
   "engines": {
-    "node": "10.14.2"
-  }
+    "node": "0.10.x"
+  },
+  "main": "index.js",
+  "repository": "git@github.com:32side/miku.git"
 }
